fixed images + header spacing w/ sibling paragraph selector

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -781,10 +781,13 @@ footer {
       text-transform: uppercase;
       font-size: 1.0rem;
       margin-top: 25px;
-      margin-bottom: -10px;
 
       // margin-top: 35px;
       // margin-bottom: 0;
+    }
+
+    h3:has(+p) {
+      margin-bottom: -10px;
     }
 
     p {
